adding auth service

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,9 @@
 <app-header></app-header>
+
+<div class="container">
+  <app-youtube-login></app-youtube-login>
+</div>
+
 <div class="container">
   <router-outlet></router-outlet>
 
