--- a/src/app/components/login/youtube-login/youtube-login.component.html
+++ b/src/app/components/login/youtube-login/youtube-login.component.html
@@ -8,7 +8,7 @@
 <button class="btn btn-primary" (click)="auth.logout()">Logout With Google</button>
 
 <div *ngFor="let item of auth.youtubeItems">
-  <h3>{{ item }} </h3>
+  <h3>{{ item.id }}</h3>
 </div>
 
 
