--- a/src/app/components/user/useradmin/useradmin.component.html
+++ b/src/app/components/user/useradmin/useradmin.component.html
@@ -1,24 +1,34 @@
 
+<div class="container">
+  
+</div> <!-- /container -->  
+
 
   <div *ngIf="auth.user$ | async as user">
-    <h1>Welcome to your Admin Panel</h1>
-    <p>You are currently logged in as {{ user.displayName }}</p>
-    <p>Link to your channel id!</p>
-
-    <ul *ngIf="user$ | async as user">
-      <li>{{user.displayName}}</li>
-    </ul>
-
-
-    <label for="">Lat</label>  <input type="number" [(ngModel)]="lat">
-    <label for="">Lng</label>  <input type="number" [(ngModel)]="lng">
+    <h3>Welcome to your Admin Panel!</h3>
     
-    <button  class="btn btn-danger" (click)="getUserLocation()">Get Current Location</button>
-    <button  class="btn btn-danger" (click)="updateLocation()">Update Location</button>
+    <div class="userprofile">
+        <img [src]="user.brandingSettings.image.bannerImageUrl" alt="Channel Banner"/>
+      <div class="row">
+        <div class="col-sm col-2">
+            <img class="img-fluid rounded-circle" [src]="user.snippet.thumbnails.default.url" alt="User Image"/>
+        </div>
+        <div class="col-sm col-10">
+            <div>
+                <h3>{{user.snippet.title}}</h3>
+                <p>{{user.snippet.description}}</p>
+            </div>
+        </div>
+      </div>
+    </div>
+
+    <h3>Update Your Location</h3>    
+    <p>Drag Maker to your desired location and save it!</p>
+    <button  class="btn btn-danger" (click)="updateLocation()">Save Location</button>
     
 
-    <agm-map [latitude]="lat" [longitude]="lng" (mapClick)="onMapClick($event)">
-      <agm-marker [latitude]="lat" [longitude]="lng">
+    <agm-map [latitude]="user.location.latitude" [longitude]="user.location.longitude" (mapClick)="onMapClick($event)">
+      <agm-marker [latitude]="user.location.latitude" [longitude]="user.location.longitude">
 
         <agm-info-window>
           <h3>Howdy {{user.displayName}}</h3>
