--- a/src/app/components/maps/homemap/homemap.component.html
+++ b/src/app/components/maps/homemap/homemap.component.html
@@ -1,5 +1,26 @@
-<agm-map [zoom]="zoom" [latitude]="lat" [longitude]="lng" (mapClick)="onMapClick($event)">
-  <agm-marker *ngFor="let creator of creatorList$ | async; let i = index" [latitude]="creator.location.latitude" [longitude]="creator.location.longitude">
+<agm-map  [latitude]="lat" [longitude]="lng" [zoom]="zoom" [disableDefaultUI]="false" [styles]="mapStyle"  >
+    <agm-marker-cluster [minimumClusterSize]="2" [maxZoom]="10" imagePath="../../../assets/clusterMaker11">
+      <agm-marker *ngFor="let creator of creatorList$ | async; let i = index" 
+          [latitude]="creator.location.latitude" [longitude]="creator.location.longitude">
+            <agm-snazzy-info-window 
+            [maxWidth]="400" 
+            [maxHeight]="400" 
+            [closeWhenOthersOpen]="true" 
+            [closeOnMapClick]="true" 
+            [borderRadius]="'4px'">
+          
+          <ng-template>
+            <img [src]="creator.snippet.thumbnails.default.url" class="" alt="Creator Image">
+            <p class="">{{creator.snippet.title}}</p>
+          </ng-template>
+        </agm-snazzy-info-window>
+      </agm-marker>
+    </agm-marker-cluster>
+</agm-map>
+
+ 
+<!--
+<agm-marker *ngFor="let creator of creatorList$ | async; let i = index" [latitude]="creator.location.latitude" [longitude]="creator.location.longitude">
 
     <agm-info-window>
       <h3>Howdy {{creator.displayName}}</h3>
@@ -7,4 +28,25 @@
 
 
   </agm-marker>
-</agm-map>
+
+<agm-map [latitude]="lat" [longitude]="lng" [zoom]="zoom" [disableDefaultUI]="false" [styles]="mapStyle" (mapClick)="mapClicked($event)">
+    <agm-marker-cluster [minimumClusterSize]="2" [maxZoom]="10" imagePath="../../../assets/clusterMaker11">
+      <agm-marker *ngFor="let campervan of campervans | async; let i = index" (markerClick)="markerClick(i, $event)" [latitude]="campervan.location.lat"
+        [longitude]="campervan.location.lng" [id]="campervan.campervanId" [iconUrl]="'/assets/customMarker.png'">
+        <agm-snazzy-info-window 
+        [maxWidth]="400" 
+        [maxHeight]="400" 
+        [closeWhenOthersOpen]="true" 
+        [closeOnMapClick]="true" 
+        [borderRadius]="'4px'"
+        [isOpen]="openSnazzy && (campervan.campervanId === selectedCampervanId)"          
+        >
+          <ng-template>
+            <img [src]="campervan.imgRef.url" class="image is-128x128 campervanListImage" alt="Placeholder image" [routerLink]="['/user/' + campervan.userId]">
+            <p class="subtitle has-text-centered campervanSubtitle">{{campervan.name}}</p>
+          </ng-template>
+        </agm-snazzy-info-window>
+      </agm-marker>
+    </agm-marker-cluster>
+  </agm-map>
+-->
