--- a/src/app/components/user/useradmin/useradmin.component.html
+++ b/src/app/components/user/useradmin/useradmin.component.html
@@ -27,7 +27,7 @@
     <button  class="btn btn-danger" (click)="updateLocation()">Save Location</button>
     
 
-    <agm-map [latitude]="user.location.latitude" [longitude]="user.location.longitude" (mapClick)="onMapClick($event)">
+    <agm-map [latitude]="user.location.latitude" [zoom]="6" [longitude]="user.location.longitude" (mapClick)="onMapClick($event)">
       <agm-marker [latitude]="user.location.latitude" [longitude]="user.location.longitude">
 
         <agm-info-window>
