--- a/src/app/components/native/footer/footer.component.html
+++ b/src/app/components/native/footer/footer.component.html
@@ -10,10 +10,10 @@
         <li><a class="text-muted" routerLink="/privacy">Privacy</a></li>
       </ul>
     </div>
-
+    <div class="col-6 col-md">
+      <app-contacts></app-contacts>
+    </div>
   </div>
 
-  <div class="col-6 col-md">
-    
-  </div>
+
 </footer>
