--- a/src/app/components/native/header/header.component.html
+++ b/src/app/components/native/header/header.component.html
@@ -2,9 +2,9 @@
 <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
   <h5 class="my-0 mr-md-auto font-weight-normal"><a routerLink="/">CREATORSMAP</a></h5>
   <nav class="my-2 my-md-0 mr-md-3">
-    <a class="p-2 text-dark" routerLink="/creators">Creators</a>
+    <a class="p-2 text-dark" routerLink="/creators">CREATORS</a>
   
   </nav>
-  <a class="btn btn-outline-primary" (click)="auth.login()">Login</a>
-  <a class="btn btn-outline-primary" (click)="auth.logout()">Logout</a>
+  <a class="btn btn-danger" (click)="auth.login()">YouTube Login</a>
+  <a class="btn btn-danger" (click)="auth.logout()">Logout</a>
 </div>
