--- a/src/app/components/contacts/contacts.component.html
+++ b/src/app/components/contacts/contacts.component.html
@@ -1,6 +1,6 @@
 
 <form class="" [formGroup]="myForm" [hidden]="success" (ngSubmit)="submitHanlder()">
-<p *ngIf="!success">Join Us</p>
+<p *ngIf="!success">Newsletter Sign Up!</p>
   <div class="form-group form-control-sm">
     <input class="form-control form-control-sm" formControlName="name" placeholder="Name">
   </div>
