--- a/src/app/components/native/header/header.component.html
+++ b/src/app/components/native/header/header.component.html
@@ -1,10 +1,56 @@
 
+<nav class="navbar navbar-expand-md bg-white border-bottom shadow-sm">
+    <a class="navbar-brand" routerLink="/">CREATORSMAP</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  
+    <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" routerLink="/creators">CREATORS</a>
+        </li>
+      </ul>
+      <ul *ngIf="!(auth.user$ | async)" class="navbar-nav">
+          <li class="nav-item active">
+              <a class="btn btn-danger" (click)="auth.login()">YouTube Login</a>
+          </li>
+      </ul>
+      <ul *ngIf="(auth.user$ | async) as user" class="navbar-nav">
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{user.displayName}}</a>
+            <div class="dropdown-menu" aria-labelledby="dropdown01">
+              <a class="dropdown-item" routerLink="/userdetail">Admin Page</a>
+              <a class="dropdown-item" href="#">Messages</a>
+              <a  class="dropdown-item btn btn-danger bg-danger" (click)="auth.logout()">Logout</a>
+            </div>
+          </li>
+          <li class="nav-item">
+              <a  class="btn btn-danger" (click)="auth.logout()">Logout</a>
+          </li>
+        </ul>
+    </div>
+  </nav>
+
+
+ <!--
+
 <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
   <h5 class="my-0 mr-md-auto font-weight-normal"><a routerLink="/">CREATORSMAP</a></h5>
   <nav class="my-2 my-md-0 mr-md-3">
     <a class="p-2 text-dark" routerLink="/creators">CREATORS</a>
   
   </nav>
-  <a class="btn btn-danger" (click)="auth.login()">YouTube Login</a>
-  <a class="btn btn-danger" (click)="auth.logout()">Logout</a>
+  
+  <div *ngIf="!(auth.user$ | async)">
+    <a class="btn btn-danger" (click)="auth.login()">YouTube Login</a>
+  </div>
+  
+    <div *ngIf="(auth.user$ | async) as user">
+      <p>{{user.displayName}}</p>
+      <a  class="btn btn-danger" (click)="auth.logout()">Logout</a>
+    </div>
+
 </div>
+
+ --> 
