--- a/src/app/components/native/header/header.component.html
+++ b/src/app/components/native/header/header.component.html
@@ -20,14 +20,12 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{user.displayName}}</a>
             <div class="dropdown-menu" aria-labelledby="dropdown01">
-              <a class="dropdown-item" routerLink="/userdetail">Admin Page</a>
+              <a class="dropdown-item" routerLink="/useradmin">Admin Page</a>
               <a class="dropdown-item" href="#">Messages</a>
               <a  class="dropdown-item btn btn-danger bg-danger" (click)="auth.logout()">Logout</a>
             </div>
           </li>
-          <li class="nav-item">
-              <a  class="btn btn-danger" (click)="auth.logout()">Logout</a>
-          </li>
+
         </ul>
     </div>
   </nav>
