--- a/src/app/components/native/home/home.component.html
+++ b/src/app/components/native/home/home.component.html
@@ -1,6 +1,6 @@
 
 <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-  <p class="lead"> Have you ever wondered where all the other Creators are? <br>Have a little patience while I create something great! <p>
+  <p class="lead"> Have you ever wondered where all the other Creators are?<p>
   <hr>
 </div>
 
