--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
 <app-header></app-header>
 
 <div class="container">
-  <router-outlet></router-outlet>
+  <main [@routeAnimations]="prepareRoute(outlet)" class="content">
+      <router-outlet #outlet="outlet"></router-outlet>
+  </main>
 
   <app-footer></app-footer>
 </div>
