--- a/src/styles.css
+++ b/src/styles.css
@@ -9,6 +9,13 @@
 html {
   font-size: 14px;
 }
+
+main {
+  text-align: center;
+  position: relative;
+}
+
+
 @media (min-width: 768px) {
   html {
     font-size: 16px;
