did loads today

--- a/src/app/components/user/creatordetail/creatordetail.component.html
+++ b/src/app/components/user/creatordetail/creatordetail.component.html
@@ -1,42 +1,53 @@
-
-  
-  <div *ngIf="creator$ | async as user">
-
-    <div class="userprofile">
-      <img [src]="user.brandingSettings.image.bannerImageUrl" alt="Channel Banner" />
-      <div class="row">
-        <div class="col-sm col-2">
-          <img class="img-fluid rounded-circle" [src]="user.snippet.thumbnails.default.url" alt="User Image" />
-        </div>
-        <div class="col-sm col-10">
-          <div>
-            <h3>{{user?.snippet.title}}</h3>
-            <p>{{user?.snippet.description}}</p>
-          </div>
+<div *ngIf="creator$ | async as user">
+  <div class="userprofile">
+    <img [src]="user.brandingSettings.image.bannerImageUrl" alt="Channel Banner" />
+    <div class="row">
+      <div class="col-sm col-2">
+        <img class="img-fluid rounded-circle" [src]="user.snippet.thumbnails.default.url" alt="User Image" />
+      </div>
+      <div class="col-sm col-10">
+        <div>
+          <h3>{{user?.snippet.title}}</h3>
+          <p>{{user?.snippet.description}}</p>
         </div>
       </div>
     </div>
-  
+  </div>
 
-  <!-- 
-    <agm-map [latitude]="lat" [zoom]="6" [longitude]="lng" [styles]="mapStyle" (mapClick)="onMapClick($event)">
-      <agm-marker [latitude]="lat" [longitude]="lng" [iconUrl]="'../../../assets/1customMarker.png'">
-  
-        <agm-snazzy-info-window [maxWidth]="400" [maxHeight]="400" [closeWhenOthersOpen]="true" [closeOnMapClick]="true"
-          [borderRadius]="'4px'">
-  
-          <ng-template>
-            <img [src]="user.snippet.thumbnails.default.url" class="" alt="Creator Image">
-            <p class="">{{user.snippet.title}}</p>
-          </ng-template>
-        </agm-snazzy-info-window>
-  
-      </agm-marker>
-    </agm-map>
-  
-  -->
-  
+  <hr>
+
+  <agm-map [latitude]="lat" [zoom]="6" [longitude]="lng" [styles]="mapStyle" (mapClick)="onMapClick($event)">
+    <agm-marker [latitude]="lat" [longitude]="lng" [iconUrl]="'../../../assets/1customMarker.png'">
+      <agm-snazzy-info-window [maxWidth]="400" [maxHeight]="400" [closeWhenOthersOpen]="true" [closeOnMapClick]="true"
+        [borderRadius]="'4px'">
+
+        <ng-template>
+          <img [src]="user.snippet.thumbnails.default.url" class="" alt="Creator Image">
+          <p class="">{{user.snippet.title}}</p>
+        </ng-template>
+
+      </agm-snazzy-info-window>
+    </agm-marker>
+  </agm-map>
+
+  <hr>
+
+
+  <div class="card-columns">
+    <div *ngFor="let v of videoList">
+      <div class="card">
+        <a href="https://www.youtube.com/watch?v={{v.videoId}}" target="_blank">
+          <img src="{{v.thumbnailUrl}}" class="card-img-top" alt="...">
+        </a>
+
+        <div class="card-body">
+          <h5 class="card-title">{{v.title}}</h5>
+          <a href="https://www.youtube.com/channel/{{v.channelId}}" target="_blank">
+            {{v.channelTitle}}
+          </a>
+        </div>
+      </div>
+    </div>
   </div>
   
-
-  
+</div>
