--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <app-header></app-header>
 
 <div class="container">
-  <main [@routeAnimations]="prepareRoute(outlet)" class="content">
-      <router-outlet #outlet="outlet"></router-outlet>
+  <main [@fadeAnimation]="o.isActivated ? o.activatedRoute : ''">
+    <router-outlet #o="outlet"></router-outlet>
   </main>
 
   <app-footer></app-footer>
