--- a/src/app/components/user/creatordetail/creatordetail.component.css
+++ b/src/app/components/user/creatordetail/creatordetail.component.css
@@ -1,4 +1,22 @@
 agm-map {
-    height: 600px;
+    height: 300px;
 }
 
+.card {display:inline-block;}
+
+.title {
+    font-size: 0.85rem;
+    font-weight: bold;
+}
+
+.channel {
+    font-size: 0.75rem;
+}
+
+.date {
+    font-size: 0.75rem;
+}
+
+.description {
+    font-size: 0.75rem;
+}
