--- a/src/app/components/native/misc/about/about.component.html
+++ b/src/app/components/native/misc/about/about.component.html
@@ -1,10 +1,15 @@
 <div>
- 
-    <h3 >Its just me, Andre</h3>
-    <img src="../../../../../assets/andreThumbnail.jpg" alt="Andre" 
-    class="rounded-circle imgSmall">
+
+    <img src="../../../../../assets/andreThumbnail.jpg" routerLink="/" alt="Andre" class="rounded-circle imgSmall">
+    <h3>Its just me, Andre</h5>
+       
     <p>
-      More to come.
+      I love building and creating stuff. I really enjoy the process of taking a problem and coming up with a solution, and then shipping a 
+      prototype of that solution to see how good my concept was. Most of the time, it's not that great. If you keep things 
+      simple and learn how to copy/paste code from Stack Overflow and GitHub, you can get really, really far with an idea. 
+      Just make sure the idea is simple. Rarely will I ever work on anything more complicated than a weekend project.
     </p>
-    
+    <quote>Nothing will teach you the lessons that real life will. Sometimes you just have to go out and get started. 
+      Just make sure you're happy and having fun. 
+      And that you're learning. The rest of life will fill itself in.</quote>    
 </div>
