--- a/src/app/components/user/creatordetail/creatordetail.component.html
+++ b/src/app/components/user/creatordetail/creatordetail.component.html
@@ -13,7 +13,11 @@
       </div>
     </div>
     <a  class="btn btn-danger" target="_blank" href="https://www.youtube.com/channel/{{user.id}}">YouTube Channel</a>
+    <button class="btn btn-danger" (click)="openMessagingForm()" >Message</button>
   </div>
+
+
+  <app-messaging-form *ngIf="showMForm"></app-messaging-form>
 
   <hr>
 
