at least a commit

--- a/src/app/components/native/misc/about/about.component.html
+++ b/src/app/components/native/misc/about/about.component.html
@@ -1,7 +1,7 @@
 <div>
 
     <img src="../../../../../assets/andreThumbnail.jpg" routerLink="/" alt="Andre" class="rounded-circle imgSmall">
-    <h3>Its just me, Andre</h5>
+    <h3>Its just me, Andre</h3>
        
     <p>
       I love building and creating stuff. I really enjoy the process of taking a problem and coming up with a solution, and then shipping a 
@@ -9,7 +9,7 @@
       simple and learn how to copy/paste code from Stack Overflow and GitHub, you can get really, really far with an idea. 
       Just make sure the idea is simple. Rarely will I ever work on anything more complicated than a weekend project.
     </p>
-    <quote>Nothing will teach you the lessons that real life will. Sometimes you just have to go out and get started. 
+    <p>Nothing will teach you the lessons that real life will. Sometimes you just have to go out and get started. 
       Just make sure you're happy and having fun. 
-      And that you're learning. The rest of life will fill itself in.</quote>    
+      And that you're learning. The rest of life will fill itself in.</p>    
 </div>
