--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 <div class="container">
   <main [@fadeAnimation]="o.isActivated ? o.activatedRoute : ''">
     <router-outlet #o="outlet"></router-outlet>
-    <app-footer></app-footer>
+    <app-footer [@fadeAnimation]="o.isActivated ? o.activatedRoute : ''"></app-footer>
   </main>
 
   
