--- a/src/app/components/messaging/messaging-form/messaging-form.component.html
+++ b/src/app/components/messaging/messaging-form/messaging-form.component.html
@@ -1,5 +1,9 @@
 
-<form *ngIf="destroyForm" class="" [formGroup]="myForm" [hidden]="success" (ngSubmit)="submitHanlder()">
+<form *ngIf="destroyForm" class="" [formGroup]="myForm" [hidden]="success" (ngSubmit)="submitHandler()">
+    
+  <div class="form-group form-control-sm">
+    <input class="form-control form-control-sm" formControlName="title" placeholder="Title">
+  </div>
     <div class="form-group form-control-sm">
       <textarea class="form-control form-control-sm" formControlName="textarea" placeholder="Send a Message!" rows="2"></textarea>
     </div>
@@ -9,7 +13,7 @@
       That is a short text
     </span>
     <div class="form-group form-control-sm">
-      <button type="submit" class="btn btn-primary" [disabled]="myForm.invalid && textarea.invalid">Message</button>
+      <button type="submit" class="btn btn-primary" [disabled]="myForm.invalid">Message</button>
       <button class="btn btn-primary" (click)="cancel()">Cancel</button>
     </div>
   </form>
