--- a/src/app/components/native/header/header.component.html
+++ b/src/app/components/native/header/header.component.html
@@ -21,7 +21,7 @@
             <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{user.displayName}}</a>
             <div class="dropdown-menu" aria-labelledby="dropdown01">
               <a class="dropdown-item" routerLink="/useradmin">Admin Page</a>
-              <a class="dropdown-item" href="#">Messages</a>
+              <a class="dropdown-item" href="/messagelist">Messages</a>
               <a  class="dropdown-item btn btn-danger bg-danger" (click)="auth.logout()">Logout</a>
             </div>
           </li>
