small design updates

--- a/src/app/components/native/home/home.component.html
+++ b/src/app/components/native/home/home.component.html
@@ -1,7 +1,6 @@
-
 <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-  <p class="lead"> Have you ever wondered where all the other Creators are? Have a look! <i class="fas fa-search"></i> <p>
-  <hr>
+  <p class="lead"> Have you ever wondered where all the other Creators are? Have a look! <i class="fas fa-search"></i><p>
+      <hr>
 </div>
 
 <div>
@@ -9,6 +8,6 @@
 </div>
 
 <hr>
-
-
-
+<div>
+    <app-creators></app-creators>  
+</div>
