--- a/src/app/components/native/misc/about/about.component.html
+++ b/src/app/components/native/misc/about/about.component.html
@@ -1,15 +1,41 @@
 <div>
+  <div class="row">
+    <div class="col-3">
+      <img src="../../../../../assets/andreThumbnail.jpg" routerLink="/" alt="Andre" class="rounded-circle imgSmall">
+    </div>
+    <div class="col-9">
+      <h3>Its just me, Andre</h3>
+      <p>
+        I love building and creating stuff; and would consider myself as a CREATOR. Some people might refer to it as a
+        Maker, Builder, Developer or just simply someone who likes to take a problem and come up with a solution. I
+        really enjoy the process of tinkering and making stuff instead of just consuming. Taking a problem, figuring
+        out a solution to it and being able to translate just an idea into a minimal viable product is a huge
+        satisfaction.
+      </p>
+      <p><a routerLink="/">CREATORSMAP</a> is just one of the many ideas where I can see huge value in connecting
+        like-minded people. Bringing people together with a shared interest and enabling them to collaborate is great!
+      </p>
 
-    <img src="../../../../../assets/andreThumbnail.jpg" routerLink="/" alt="Andre" class="rounded-circle imgSmall">
-    <h3>Its just me, Andre</h3>
-       
-    <p>
-      I love building and creating stuff. I really enjoy the process of taking a problem and coming up with a solution, and then shipping a 
-      prototype of that solution to see how good my concept was. Most of the time, it's not that great. If you keep things 
-      simple and learn how to copy/paste code from Stack Overflow and GitHub, you can get really, really far with an idea. 
-      Just make sure the idea is simple. Rarely will I ever work on anything more complicated than a weekend project.
-    </p>
-    <p>Nothing will teach you the lessons that real life will. Sometimes you just have to go out and get started. 
-      Just make sure you're happy and having fun. 
-      And that you're learning. The rest of life will fill itself in.</p>    
+      <div class="row">
+        <div class="col-sm">
+          <p>Feel free to join this community! --></p>
+        </div>
+        <div class="col-sm">
+          <a class="btn btn-danger" (click)="auth.login()">Join Creatorsmap</a>
+        </div>
+      </div>
+
+      <hr>
+
+      <p>Check out my Youtube Channel for more!</p>
+      <div class="row">
+        <div class="col-sm">
+          <a routerLink="/creator/7lW8IstRAmWxCXx3vwPYXJe9Dtv2">Andre Kirchhoff</a>
+        </div>
+        <div class="col-sm">
+          <a routerLink="/creator/o64FCyMP1BVaJmgGtgxdru6h42u1">Loveyourcamper</a>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
