--- a/src/app/components/user/creators/creators.component.html
+++ b/src/app/components/user/creators/creators.component.html
@@ -1,4 +1,5 @@
 <div class="container marginTop">
+    <p class="lead text-center">Say Hi to our newest members!</p>
         <div class="row">
                 <div *ngFor="let creator of creatorList$ | async" class="col">
                   <div class="row">
