--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,14 @@
 <app-header></app-header>
 
 <div class="container">
+  <!--
   <main [@fadeAnimation]="o.isActivated ? o.activatedRoute : ''">
     <router-outlet #o="outlet"></router-outlet>
     <app-footer [@fadeAnimation]="o.isActivated ? o.activatedRoute : ''"></app-footer>
   </main>
-
-  
+  -->
+  <router-outlet></router-outlet>
+  <app-footer></app-footer>
 </div>
 <hr>
 
