--- a/src/app/components/login/youtube-login/youtube-login.component.html
+++ b/src/app/components/login/youtube-login/youtube-login.component.html
@@ -1,28 +1,35 @@
- 
 <div class="container">
 
-<button  class="btn btn-danger" (click)="auth.login()">Login With YouTube</button>
-<button class="btn btn-danger" (click)="auth.logout()">Logout</button>
 
-<div *ngIf="auth.user$ | async as user">
-  <h3>logged in as {{ user.displayName}}</h3>
+  <button class="btn btn-danger" (click)="auth.logout()">Logout</button>
+
+  <div *ngIf="auth.user$ | async as user">
+    <h3>logged in as {{ user.displayName}}</h3>
+  </div>
+
+  <div *ngIf="auth.user$ | async as user">
+    <p>Name: {{ user.displayName }}</p>
+    <p>UID: {{user.uid}}</p>
+
+    <p>Youtube Data</p>
+    <p>Channel ID: {{user.id}}</p>
+    <p>Channel Description: {{ user.description }}</p>
+    <p>Video Count: {{user.videoCount}}</p>
+    <p>View Count: {{user.viewCount}}</p>
+    <p>Country: {{user.country}}</p>
+    <p>Published {{user.publishedAt | date }}</p>
+    <p></p>
+  </div>
+
+
+
 </div>
 
-<div *ngIf="auth.user$ | async as user">
-  <p>Name: {{ user.displayName }}</p>
-  <p>UID: {{user.uid}}</p>
-
-  <p>Youtube Data</p>
-  <p>Channel ID: {{user.id}}</p>
-  <p>Channel Description: {{ user.description }}</p>
-  <p>Video Count: {{user.videoCount}}</p>
-  <p>View Count: {{user.viewCount}}</p>
-  <p>Country: {{user.country}}</p>
-  <p>Published {{user.publishedAt | date }}</p>
-  <p></p>
+<div class="container login-container">
+    <div class="row">
+        <div class="login-form-1">
+            <h3>Join Creatorsmap!</h3>
+            <button class="btn btn-danger" (click)="auth.login()">Login With YouTube</button>
+        </div>
+    </div>
 </div>
-
-
-
-</div>
-
