--- a/src/app/components/messaging/messaging-list/messaging-list.component.html
+++ b/src/app/components/messaging/messaging-list/messaging-list.component.html
@@ -1,15 +1,15 @@
 <div *ngIf="auth">
-    <h3>Hello, {{auth.userObject.userName}}! Welcome to your Messages.</h3>
+  <h3>Hello, {{auth.userObject.userName}}! Welcome to your Messages.</h3>
   <div class="row">
     <div class="col-sm">
-      
+
       <div *ngFor="let message of messages | async">
         <div class="card" style="width: 18rem;">
           <div class="card-body">
             <h5 class="card-title">{{message.title}}</h5>
             <h6 class="card-subtitle mb-2 text-muted">From: {{message.sendFrom.userName}}</h6>
             <p class="card-text"> {{message.body}}</p>
-            <a href="#" class="card-link">Reply</a>
+            <a (click)="replyActive(message.sendFrom.userId, message.messageId)" class="card-link">Reply</a>
             <a (click)="archiveMessage(message.messageId)" class="card-link">Archive</a>
             <p><time class="timestamp" datetime="2016-1-1">Sent: {{message.createdAt.seconds * 1000 |
                 date:'MM-dd-yyyy'}}</time></p>
@@ -23,19 +23,19 @@
       <button (click)="showArchive()" class="btn btn-primary">Show Archive</button>
       <div *ngIf="archiv">
         <div *ngFor="let message of messagearchive | async">
-            <div class="card" style="width: 18rem;">
-              <div class="card-body">
-                <h5 class="card-title">{{message.title}}</h5>
-                <h6 class="card-subtitle mb-2 text-muted">From: {{message.sendFrom.userName}}</h6>
-                <p class="card-text"> {{message.body}}</p>
-                <a href="#" class="card-link">Reply</a>
-                <a (click)="toInbox(message.messageId)" class="card-link">To Inbox</a>
-                <p><time class="timestamp" datetime="2016-1-1">Send {{message.createdAt.seconds * 1000 |
-                    date:'MM-dd-yyyy'}}</time></p>
-              </div>
+          <div class="card" style="width: 18rem;">
+            <div class="card-body">
+              <h5 class="card-title">{{message.title}}</h5>
+              <h6 class="card-subtitle mb-2 text-muted">From: {{message.sendFrom.userName}}</h6>
+              <p class="card-text"> {{message.body}}</p>
+              <a href="#" class="card-link">Reply</a>
+              <a (click)="toInbox(message.messageId)" class="card-link">To Inbox</a>
+              <p><time class="timestamp" datetime="2016-1-1">Send {{message.createdAt.seconds * 1000 |
+                  date:'MM-dd-yyyy'}}</time></p>
             </div>
-    
           </div>
+
+        </div>
       </div>
 
     </div>
